--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>Utama – Admin</title>
-    </head>
-    <body>
-      <table border=”0”>
-        <tr><td>Daftar anggota</td></tr>
-        <tr><td> <a href="2304111010037.html">1. Ahmad Zaky Insaf</a></td></tr>
-      </table>
-    </body>
-</html>
-
-    <!-- Tautan ke halaman lain -->
-    <p><a href="2304111010041.html">Muhammad Rafi</a></p>
+<html>
+  <head>
+    <title>Utama – Admin</title>
+  </head>
+  <body>
+    <table border="0">
+      <tr><td>Daftar anggota</td></tr>
+      <tr><td><a href="2304111010041.html">Muhammad Rafi</a></td></tr>
+    </table>
   </body>
 </html>
