--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <table border="0">
       <tr><td>Daftar anggota</td></tr>
       <tr><td><a href="2304111010041.html">Muhammad Rafi</a></td></tr>
+      <tr><td><a href="2304111010093.html">Cahaya Amonta</a></td></tr>
     </table>
   </body>
 </html>
